more write ups for the presentation

--- a/mcp_sf_ny_corr.ipynb
+++ b/mcp_sf_ny_corr.ipynb
@@ -1241,6 +1241,112 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## The Great Weekday Whirlwind: Unmasking the Optimal Days for Feel-Good Family Fun in NYC and SF!\n",
+    "\n",
+    "Ladies and Gentlemen, welcome to the sidesplitting analysis of NYC and SF's quest for feel-good family fun through the lens of drug-related antics! Get ready for the rib-tickling rollercoaster of days, nights, and maybe a dash of questionable decisions.\n",
+    "\n",
+    "# Slide 1: \"Monday: The Underestimated Kickstarters\"\n",
+    "\n",
+    "NYC 2008: With 195 incidents, Monday kicks off the week like a reluctant superhero – underestimated but secretly packing a punch. The city is dabbling in what we call the 'Monday Mystique.'\n",
+    "\n",
+    "NYC 2017: NYC's love affair with Monday continues with 458 incidents, proving that Monday is not just the start of the week; it's the unsung hero of NYC's bustling festivities. Who knew Mondays could be so happening?\n",
+    "\n",
+    "SF 2008 & 2017: SF, on the other hand, is a bit skeptical about Mondays, with incidents lingering in double digits. Apparently, SF is giving Monday side-eye, wondering if it's cool enough to join the party.\n",
+    "\n",
+    "# Slide 2: \"Tuesday: The True MVPs of the Week\"\n",
+    "\n",
+    "NYC 2008 & 2017: Tuesday emerges as the MVP in both NYC timelines, boasting 522 incidents in 2008 and skyrocketing to 1542 in 2017. Tuesday is not just a day; it's a lifestyle. NYC's Tuesday is so legendary; it might get its own sitcom.\n",
+    "\n",
+    "SF 2008 & 2017: SF, though, gives Tuesday the side-eye. It's like SF is saying, \"Tuesday, you think you're the MVP, but we'll see about that.\" The incidents remain humble, quietly contemplating whether Tuesday truly deserves all the attention.\n",
+    "\n",
+    "# Slide 3: \"Wednesday: Midweek Hoorah or Midweek Whoopsie?\"\n",
+    "\n",
+    "NYC 2008 & 2017: Wednesday steps into the limelight with 589 incidents in 2008 and 1149 in 2017. It's like NYC is declaring, \"Why wait for the weekend to party?\" Wednesday is the real midweek maverick.\n",
+    "\n",
+    "SF 2008 & 2017: SF, though, is not fully convinced about Wednesday's potential. With incidents still in the low hundreds, Wednesday is the quirky cousin of the week, trying to find its groove.\n",
+    "\n",
+    "# Slide 4: \"Thursday: The Almost-Weekend Thirst Quencher\"\n",
+    "\n",
+    "NYC 2008 & 2017: Thursday, the almost-weekend thirst quencher, brings 462 incidents in 2008 and 825 in 2017. NYC is saying, \"Why wait for Friday?\" Thursday is the underdog, the unsung hero of pre-weekend revelry.\n",
+    "\n",
+    "SF 2008 & 2017: SF, ever the skeptic, is side-eyeing Thursday. It's like SF is saying, \"You think you're almost the weekend, Thursday, but are you really?\" Thursday remains in the moderate lane, questioning its own Thursdayness.\n",
+    "\n",
+    "# Slide 5: \"Friday: The Grand Finale (or Just the Beginning?)\"\n",
+    "\n",
+    "NYC 2008 & 2017: Friday, the grand finale (or maybe just the kickoff), storms in with 659 incidents in 2008 and a whopping 1301 in 2017. NYC is declaring, \"The weekend starts NOW!\" Friday is not just a day; it's a festival.\n",
+    "\n",
+    "SF 2008 & 2017: SF, however, is holding Friday to its own standards. With incidents in the double digits, SF is giving a nod to Friday but reminding it that there's still room for improvement.\n",
+    "\n",
+    "# Slide 6: \"Saturday and Sunday: The Weekend Warriors\"\n",
+    "\n",
+    "NYC & SF 2008 & 2017: Saturday and Sunday, the weekend warriors, are like the loyal sidekicks – always there, consistently bringing festive fun. Both cities agree, \"Weekends are for warriors – choose your battles wisely!\"\n",
+    "\n",
+    "## In Conclusion:\n",
+    "\n",
+    "So, which day stands atop the podium as the optimal day for feel-good family fun in NYC and SF? Drumroll, please... It's a toss-up between Tuesday, the true MVP, and Friday, the grand finale/kickoff extraordinaire! Whether you're laughing through Tuesday's escapades or dancing into Friday's festivities, remember – every day is a carnival of possibilities in the whimsical world of weekday shenanigans! 🎉🕺💃"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## The Prodigiously Playful Pursuit of Prostitution: Days of the Week Delight in NYC and SF!\n",
+    "\n",
+    "Ladies and Gentlemen, buckle up for the uproarious exploration of NYC and SF's rendezvous with the world's oldest profession! Today, we decipher the cheeky chronicles of prostitution-related antics, because nothing says \"family fun\" like analyzing days of the week in the realm of NYC and SF's mirthful misadventures.\n",
+    "\n",
+    "# Slide 1: \"Monday - The Unexpected Kickstart\"\n",
+    "\n",
+    "NYC 2008: Monday kicks off the week with 2.76 units of illicit intrigue. It's like Monday decided, \"Why not start the week with a plot twist?\"\n",
+    "\n",
+    "NYC 2017: NYC's Monday in 2017 is a subdued encore with 0.58 units of escapades. Monday seems to be taking a coffee break, perhaps rethinking its role in the workweek drama.\n",
+    "\n",
+    "SF 2008: SF's Monday is the rebel of the week with 15.45 units. It's like Monday is saying, \"Who said Mondays have to be dull?\"\n",
+    "\n",
+    "SF 2017: However, SF's Monday in 2017 is having an existential crisis with zero units – a Monday mute button, if you will. SF is wondering if Monday even exists.\n",
+    "\n",
+    "# Slide 2: \"Tuesday - The True Titan of Temptation\"\n",
+    "\n",
+    "NYC 2008 & 2017: Tuesday in NYC is the true titan of temptation with 15.29 units in 2008 and 11.56 in 2017. Tuesday is so happening; it's considering opening its own nightclub.\n",
+    "\n",
+    "SF 2008: SF's Tuesday is like a low-key soirée with 18.18 units – not trying to outshine NYC but casually saying, \"I'm here too.\"\n",
+    "\n",
+    "SF 2017: However, SF's Tuesday in 2017 is feeling the pressure with 4.55 units, as if Tuesday is questioning its own midweek prowess.\n",
+    "\n",
+    "# Slide 3: \"Wednesday - The Whirlwind of Wonders\"\n",
+    "\n",
+    "NYC 2008 & 2017: Wednesday in NYC is the whirlwind of wonders with 30.08 units in 2008 and 17.34 in 2017. Wednesday is the enigma of the week, leaving everyone wondering, \"What happens on Wednesdays?\"\n",
+    "\n",
+    "SF 2008 & 2017: SF's Wednesday is the cool cat of the week with 24.55 units in 2008 and 13.64 in 2017. Wednesday is like the mysterious neighbor – intriguing but keeping a low profile.\n",
+    "\n",
+    "# Slide 4: \"Thursday - The Thrilling Twist of the Almost-Weekend\"\n",
+    "\n",
+    "NYC 2008 & 2017: Thursday is the thrilling twist with 12.53 units in 2008 and 8.67 in 2017. NYC's Thursday is the unsung hero of pre-weekend escapades.\n",
+    "\n",
+    "SF 2008: SF's Thursday is keeping it steady with 12.73 units – not trying to outdo NYC but maintaining its Thursday dignity.\n",
+    "\n",
+    "SF 2017: SF's Thursday in 2017 is the prodigy of the week with a whopping 65.91 units, as if Thursday is saying, \"Hold my Thursday-ness; I've got this!\"\n",
+    "\n",
+    "# Slide 5: \"Friday - The Flamboyant Finale (or Just the Prelude?)\"\n",
+    "\n",
+    "NYC 2008 & 2017: Friday, the flamboyant finale or maybe just the prelude, storms in with 9.77 units in 2008 and 26.01 in 2017. NYC's Friday is the grand orchestrator of weekend shenanigans.\n",
+    "\n",
+    "SF 2008 & 2017: SF's Friday is the thoughtful participant with 9.09 units in both timelines. Friday in SF is like the friend who joins the party but brings board games.\n",
+    "\n",
+    "# Slide 6: \"Saturday and Sunday - The Weekend Whirlwinds\"\n",
+    "\n",
+    "NYC & SF 2008 & 2017: Saturday and Sunday, the weekend whirlwinds, are the loyal comrades with varying degrees of hilarity. Whether it's Saturday soirées or Sunday serenity, the weekend warriors are always in the mix.\n",
+    "\n",
+    "## In Conclusion:\n",
+    "\n",
+    "So, which day steals the crown for the optimal day of the week for feel-good family fun in the realm of prostitution-related escapades? Drumroll, please... Tuesday, the true titan of temptation, stands tall alongside Wednesday, the whirlwind of wonders, and Thursday, the thrilling twist of the almost-weekend! Whether you're decoding Wednesday's enigma or surrendering to Thursday's prodigy, NYC and SF prove that every day brings its own brand of rollicking festivities in the rib-tickling world of weekday amusements! 🎭💋🕺💃"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -2144,7 +2250,7 @@
     "# Slide 2: \"Drug Détente in 2017\"\n",
     "\n",
     "Fast forward to 2017, and the party had undergone some serious downsizing. MISSION was still trying to keep the spirit alive with 79 incidents, but the once reigning champion TENDERLOIN took a chill pill, with a mere 2 incidents. Oh, how the mighty have mellowed!\n",
-    "Slide 3: \"Prostitution Prowess of 2008\"\n",
+    "# Slide 3: \"Prostitution Prowess of 2008\"\n",
     "\n",
     "Now, let's talk about the oldest profession in the world – Prostitution in 2008. TENDERLOIN, not just content with its drug escapades, hosted a whopping 68 incidents. Bravo, Tenderloin, keeping the streets lively in more ways than one!\n",
     "\n",
@@ -2153,7 +2259,10 @@
     "# Slide 4: \"Prostitution Peek-a-Boo in 2017\"\n",
     "\n",
     "Fast forward again to 2017, and it seems the Prostitution party was making a covert comeback. TARAVAL district, the dark horse, emerged with 30 incidents, showing that every district has a story to tell.\n",
-    "In conclusion, when it comes to the hotspots of celebration in San Francisco, TENDERLOIN in 2008 takes the crown for a wild and unforgettable ride. As for 2017, well, let's just say the city collectively decided to take a breather. So, if you're on the lookout for a good time, keep your eyes peeled in the nooks and crannies of Tenderloin or the unexpected corners of Taraval – you might just stumble upon a celebration waiting to happen! Stay groovy, San Francisco!"
+    "\n",
+    "# In conclusion;\n",
+    "\n",
+    " when it comes to the hotspots of celebration in San Francisco, TENDERLOIN in 2008 takes the crown for a wild and unforgettable ride. As for 2017, well, let's just say the city collectively decided to take a breather. So, if you're on the lookout for a good time, keep your eyes peeled in the nooks and crannies of Tenderloin or the unexpected corners of Taraval – you might just stumble upon a celebration waiting to happen! Stay groovy, San Francisco!"
    ]
   },
   {
@@ -2791,37 +2900,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: GeoJSON in c:\\users\\mikea\\appdata\\roaming\\python\\python311\\site-packages (3.1.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error processing line 15 of C:\\Users\\mikea\\AppData\\Roaming\\Python\\Python311\\site-packages\\load_dotenv.pth:\n",
-      "\n",
-      "  Traceback (most recent call last):\n",
-      "    File \"<frozen site>\", line 186, in addpackage\n",
-      "    File \"<string>\", line 1, in <module>\n",
-      "    File \"C:\\Users\\mikea\\AppData\\Roaming\\Python\\Python311\\site-packages\\load_dotenv.py\", line 17, in <module>\n",
-      "      from dotenv import load_dotenv\n",
-      "  ModuleNotFoundError: No module named 'dotenv'\n",
-      "\n",
-      "Remainder of file ignored\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pip install GeoJSON"
+    "#pip install GeoJSON"
    ]
   },
   {
@@ -2844,7 +2927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2860,8 +2943,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# Load your geospatial data\n",
     "\n",
     "# NY drugs\n",
@@ -2884,31 +2965,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'longitude'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3653\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3652\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3653\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3654\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\index.pyx:147\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\index.pyx:176\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'longitude'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[51], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./Cleaned_Resources_NY_SanFran/ny_drugs_dec_2008.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Create a GeoDataFrame by converting latitude and longitude to a Point geometry\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m geometry \u001b[38;5;241m=\u001b[39m [Point(xy) \u001b[38;5;28;01mfor\u001b[39;00m xy \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlongitude\u001b[39m\u001b[38;5;124m'\u001b[39m], df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlatitude\u001b[39m\u001b[38;5;124m'\u001b[39m])]\n\u001b[0;32m      6\u001b[0m gdf \u001b[38;5;241m=\u001b[39m gpd\u001b[38;5;241m.\u001b[39mGeoDataFrame(df, geometry\u001b[38;5;241m=\u001b[39mgeometry)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Optionally, set the coordinate reference system (CRS) if needed\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# For example, using WGS84 (epsg:4326)\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\Lib\\site-packages\\pandas\\core\\frame.py:3761\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3759\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   3760\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3761\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mget_loc(key)\n\u001b[0;32m   3762\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3763\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3655\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3653\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3654\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m-> 3655\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3656\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3657\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3658\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3659\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3660\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'longitude'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read the CSV file\n",
     "df = pd.read_csv('./Cleaned_Resources_NY_SanFran/ny_drugs_dec_2008.csv')\n",
