updated df to include coordinates, started new ipynb file for the written analysis

--- a/mcp_sf_ny_corr.ipynb
+++ b/mcp_sf_ny_corr.ipynb
@@ -2653,6 +2653,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#7) \n",
+    "## Coastal Chronicles Showdown: East Coast vs. West Coast Festive Frenzy!\n",
+    "\n",
+    "Ladies and Gentlemen, welcome to the epic Coastal Chronicles showdown where we dive into the data, dissect the dynamics, and unravel the mysteries of festive fun on the East Coast and West Coast. Brace yourselves for a side-splitting analysis of gangsta merriment, because when it comes to revelry, it's not just about who's got swag but who's got the swagger in their festive fun.\n",
+    "\n",
+    "# **1. Drug Shenanigans: East Coast Swagger vs. West Coast Cool\n",
+    "\n",
+    "NYC vs. SF (2008 & 2017): In the realm of drug-related escapades, both NYC and SF showcased their unique dance moves. NYC, with its significant decrease in drug activity over the month, set the tone for a more subdued groove. SF, on the other hand, presented mixed signals, hinting at changes in the rhythm. The verdict? NYC might have the swagger in slowing things down, but SF adds a dash of unpredictability to the West Coast cool.\n",
+    "\n",
+    "# **2. Prostitution Chronicles: East Coast Elegance vs. West Coast Whimsy\n",
+    "\n",
+    "NYC vs. SF (2008 & 2017): Prostitution-related antics took center stage as we witnessed the cheeky chronicles of NYC and SF's rendezvous. NYC, with its fluctuations in incidents, displayed a certain elegance in its weekday whimsies. SF, however, embraced the unpredictable, with days often questioning their own midweek prowess. The verdict? NYC brings the elegance, but SF adds a touch of West Coast whimsy to the festivities.\n",
+    "\n",
+    "# **3. Optimal Days for Festive Fun: East Coast Extravaganza vs. West Coast Whirlwind\n",
+    "\n",
+    "NYC vs. SF (Drugs & Prostitution - 2008 & 2017): When it comes to pinpointing the optimal days for feel-good family fun, the days of the week became battlegrounds for revelry. NYC's Tuesday emerged as the true titan of temptation, while SF's Wednesday decided to be the whirlwind of wonders. The verdict? NYC's got the East Coast extravaganza with Tuesday's triumph, but SF adds a whirlwind twist to the West Coast's midweek merriment.\n",
+    "\n",
+    "##In Conclusion:\n",
+    "\n",
+    "As we wrap up the Coastal Chronicles, it's clear that both coasts bring their A-game to the festive frenzy. NYC, with its elegant rhythms and calculated moves, stands as the epitome of East Coast sophistication. Meanwhile, SF, with its unpredictable twists and laid-back vibes, embodies the carefree spirit of the West Coast.\n",
+    "\n",
+    "So, whose gangstas have the most festive fun? It's a tie! The East Coast and West Coast both bring their unique swagger to the celebration, proving that in the grand dance of Coastal Chronicles, everyone's a winner in the game of gangsta festivities! 🎉🌊🕺💃"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Outlier Detection:\n",
     "- Identify and investigate any outliers in the data that could skew the analysis.\n",
