Adding sf maps and code

--- a/CG_geospacial.ipynb
+++ b/CG_geospacial.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,15 @@
     "\n",
     "#NY prostitution\n",
     "ny_prostitution_dec_2008 = pd.read_csv('./Cleaned_Resources_NY_SanFran/ny_prostitution_dec_2008.csv')\n",
-    "ny_prostitution_dec_2017 = pd.read_csv('./Cleaned_Resources_NY_SanFran/ny_prostitution_dec_2017.csv')"
+    "ny_prostitution_dec_2017 = pd.read_csv('./Cleaned_Resources_NY_SanFran/ny_prostitution_dec_2017.csv')\n",
+    "\n",
+    "#SF drugs\n",
+    "sf_drugs_dec_2008 = pd.read_csv('./Cleaned_Resources_NY_SanFran/SanFran_drugs_2008.csv')\n",
+    "sf_drugs_dec_2017 = pd.read_csv('./Cleaned_Resources_NY_SanFran/SanFran_drugs_2017.csv')\n",
+    "\n",
+    "#SF prostitution\n",
+    "sf_prostitution_dec_2008 = pd.read_csv('./Cleaned_Resources_NY_SanFran/SanFran_prostitution_2008.csv')\n",
+    "sf_prostitution_dec_2017 = pd.read_csv('./Cleaned_Resources_NY_SanFran/SanFran_prostitution_2017.csv')\n"
    ]
   },
   {
@@ -45,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,22 +130,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the map to an HTML file\n",
-    "map_drugs_dec_2008.save('map_drugs_ny_dec_2008_district.html')\n",
-    "map_drugs_dec_2017.save('map_drugs_ny_dec_2017_district.html')\n",
-    "map_prostitution_dec_2008.save('map_prostitution_ny_dec_2008_district.html')\n",
-    "map_prostitution_dec_2017.save('map_prostitution_ny_dec_2017_district.html')"
+    "map_drugs_dec_2008.save('./Maps/map_drugs_ny_dec_2008_district.html')\n",
+    "map_drugs_dec_2017.save('./Maps/map_drugs_ny_dec_2017_district.html')\n",
+    "map_prostitution_dec_2008.save('./Maps/map_prostitution_ny_dec_2008_district.html')\n",
+    "map_prostitution_dec_2017.save('./Maps/map_prostitution_ny_dec_2017_district.html')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Maps by district San Fransisco\n"
+    "# Maps by district San Fransisco"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/q0/kyk7n6qs3cj9s3l8y_40h1rr0000gn/T/ipykernel_13925/2255486336.py:29: UserWarning: color argument of Icon should be one of: {'beige', 'orange', 'darkgreen', 'darkred', 'lightblue', 'black', 'purple', 'red', 'cadetblue', 'blue', 'lightgreen', 'white', 'pink', 'darkblue', 'gray', 'green', 'lightred', 'darkpurple', 'lightgray'}.\n",
+      "  folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_drugs_dec_2008)\n",
+      "/var/folders/q0/kyk7n6qs3cj9s3l8y_40h1rr0000gn/T/ipykernel_13925/2255486336.py:49: UserWarning: color argument of Icon should be one of: {'beige', 'orange', 'darkgreen', 'darkred', 'lightblue', 'black', 'purple', 'red', 'cadetblue', 'blue', 'lightgreen', 'white', 'pink', 'darkblue', 'gray', 'green', 'lightred', 'darkpurple', 'lightgray'}.\n",
+      "  folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_drugs_dec_2017)\n",
+      "/var/folders/q0/kyk7n6qs3cj9s3l8y_40h1rr0000gn/T/ipykernel_13925/2255486336.py:69: UserWarning: color argument of Icon should be one of: {'beige', 'orange', 'darkgreen', 'darkred', 'lightblue', 'black', 'purple', 'red', 'cadetblue', 'blue', 'lightgreen', 'white', 'pink', 'darkblue', 'gray', 'green', 'lightred', 'darkpurple', 'lightgray'}.\n",
+      "  folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_prostitution_dec_2008)\n",
+      "/var/folders/q0/kyk7n6qs3cj9s3l8y_40h1rr0000gn/T/ipykernel_13925/2255486336.py:89: UserWarning: color argument of Icon should be one of: {'beige', 'orange', 'darkgreen', 'darkred', 'lightblue', 'black', 'purple', 'red', 'cadetblue', 'blue', 'lightgreen', 'white', 'pink', 'darkblue', 'gray', 'green', 'lightred', 'darkpurple', 'lightgray'}.\n",
+      "  folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_prostitution_dec_2017)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sf_lat = 37.7749\n",
+    "sf_long = -122.4194\n",
+    "\n",
+    "# Create a map centered at a specific location\n",
+    "map_sf_drugs_dec_2008 = folium.Map(location=[sf_lat, sf_long], zoom_start=10)\n",
+    "map_sf_drugs_dec_2017 = folium.Map(location=[sf_lat, sf_long], zoom_start=10)\n",
+    "map_sf_prostitution_dec_2008 = folium.Map(location=[sf_lat, sf_long], zoom_start=10)\n",
+    "map_sf_prostitution_dec_2017 = folium.Map(location=[sf_lat, sf_long], zoom_start=10)\n",
+    "\n",
+    "# for index, row in sf_drugs_dec_2008.iterrows():\n",
+    "#     folium.Marker(location=[row['Y'], row['X']], popup='Marker Popup', icon=folium.Icon(color=\"green\")).add_to(map_sf_drugs_dec_2008)\n",
+    "\n",
+    "\n",
+    "# Loop through the rows and add markers\n",
+    "for index, row in sf_drugs_dec_2008.iterrows():\n",
+    "    if(row['pd_district'] == 'CENTRAL'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"green\")).add_to(map_sf_drugs_dec_2008)\n",
+    "    if(row['pd_district'] == 'INGLESIDE'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"orange\")).add_to(map_sf_drugs_dec_2008)\n",
+    "    if(row['pd_district'] == 'MISSION'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"darkblue\")).add_to(map_sf_drugs_dec_2008)\n",
+    "    if(row['pd_district'] == 'NORTHERN'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"blue\")).add_to(map_sf_drugs_dec_2008)\n",
+    "    if(row['pd_district'] == 'PARK'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"red\")).add_to(map_sf_drugs_dec_2008)\n",
+    "    if(row['pd_district'] == 'RICHMOND'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"purple\")).add_to(map_sf_drugs_dec_2008)\n",
+    "    if(row['pd_district'] == 'SOUTHERN'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_drugs_dec_2008)\n",
+    "    if(row['pd_district'] == 'TARAVAL'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"darkgreen\")).add_to(map_sf_drugs_dec_2008)\n",
+    "    if(row['pd_district'] == 'TENDERLOIN'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"pink\")).add_to(map_sf_drugs_dec_2008)\n",
+    "\n",
+    "for index, row in sf_drugs_dec_2017.iterrows():\n",
+    "    if(row['pd_district'] == 'CENTRAL'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"green\")).add_to(map_sf_drugs_dec_2017)\n",
+    "    if(row['pd_district'] == 'INGLESIDE'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"orange\")).add_to(map_sf_drugs_dec_2017)\n",
+    "    if(row['pd_district'] == 'MISSION'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"darkblue\")).add_to(map_sf_drugs_dec_2017)\n",
+    "    if(row['pd_district'] == 'NORTHERN'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"blue\")).add_to(map_sf_drugs_dec_2017)\n",
+    "    if(row['pd_district'] == 'PARK'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"red\")).add_to(map_sf_drugs_dec_2017)\n",
+    "    if(row['pd_district'] == 'RICHMOND'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"purple\")).add_to(map_sf_drugs_dec_2017)\n",
+    "    if(row['pd_district'] == 'SOUTHERN'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_drugs_dec_2017)\n",
+    "    if(row['pd_district'] == 'TARAVAL'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"darkgreen\")).add_to(map_sf_drugs_dec_2017)\n",
+    "    if(row['pd_district'] == 'TENDERLOIN'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"pink\")).add_to(map_sf_drugs_dec_2017)\n",
+    "\n",
+    "for index, row in sf_prostitution_dec_2008.iterrows():\n",
+    "    if(row['pd_district'] == 'CENTRAL'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"green\")).add_to(map_sf_prostitution_dec_2008)\n",
+    "    if(row['pd_district'] == 'INGLESIDE'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"orange\")).add_to(map_sf_prostitution_dec_2008)\n",
+    "    if(row['pd_district'] == 'MISSION'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"darkblue\")).add_to(map_sf_prostitution_dec_2008)\n",
+    "    if(row['pd_district'] == 'NORTHERN'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"blue\")).add_to(map_sf_prostitution_dec_2008)\n",
+    "    if(row['pd_district'] == 'PARK'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"red\")).add_to(map_sf_prostitution_dec_2008)\n",
+    "    if(row['pd_district'] == 'RICHMOND'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"purple\")).add_to(map_sf_prostitution_dec_2008)\n",
+    "    if(row['pd_district'] == 'SOUTHERN'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_prostitution_dec_2008)\n",
+    "    if(row['pd_district'] == 'TARAVAL'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"darkgreen\")).add_to(map_sf_prostitution_dec_2008)\n",
+    "    if(row['pd_district'] == 'TENDERLOIN'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"pink\")).add_to(map_sf_prostitution_dec_2008)\n",
+    "\n",
+    "for index, row in sf_prostitution_dec_2017.iterrows():    \n",
+    "    if(row['pd_district'] == 'CENTRAL'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"green\")).add_to(map_sf_prostitution_dec_2017)\n",
+    "    if(row['pd_district'] == 'INGLESIDE'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"orange\")).add_to(map_sf_prostitution_dec_2017)\n",
+    "    if(row['pd_district'] == 'MISSION'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"darkblue\")).add_to(map_sf_prostitution_dec_2017)\n",
+    "    if(row['pd_district'] == 'NORTHERN'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"blue\")).add_to(map_sf_prostitution_dec_2017)\n",
+    "    if(row['pd_district'] == 'PARK'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"red\")).add_to(map_sf_prostitution_dec_2017)\n",
+    "    if(row['pd_district'] == 'RICHMOND'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"purple\")).add_to(map_sf_prostitution_dec_2017)\n",
+    "    if(row['pd_district'] == 'SOUTHERN'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_prostitution_dec_2017)\n",
+    "    if(row['pd_district'] == 'TARAVAL'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"darkgreen\")).add_to(map_sf_prostitution_dec_2017)\n",
+    "    if(row['pd_district'] == 'TENDERLOIN'):\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"pink\")).add_to(map_sf_prostitution_dec_2017)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_sf_drugs_dec_2008.save('./Maps/map_drugs_sf_dec_2008_district.html')\n",
+    "map_sf_drugs_dec_2017.save('./Maps/map_drugs_sf_dec_2017_district.html')\n",
+    "map_sf_prostitution_dec_2008.save('./Maps/map_prostitution_sf_dec_2008_district.html')\n",
+    "map_sf_prostitution_dec_2017.save('./Maps/map_prostitution_sf_dec_2017_district.html')"
    ]
   }
  ],
